Update and rename bday.html to index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="fullscreen" class="fullscreen-overlay">
         <div class="fullscreen-content">
             <!-- Replace the src with your video or GIF file -->
-            <img id="fullscreenGif" src="media/bday.gif" alt="Full-screen GIF" style="display: none;"> 
+            <img id="fullscreenGif" src="media/index.gif" alt="Full-screen GIF" style="display: none;"> 
             <video id="fullscreenVideo" controls autoplay style="display: none;">
                 <source src="media/love.mp4" type="video/mp4">
             </video>
