--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <nav class="header-menu">
                 <ul>
                     <li class="hover-me"><a href="../index.html">Home</a></li>
-                    <li class="hover-me"><a href="bday.html">Birthday🥳</a></li>
+                    <li class="hover-me"><a href="index.html">Birthday🥳</a></li>
                     <li class="hover-me" aria-haspopup="true" aria-expanded="false">
                         <a href="#">Date?❤️‍🩹</a>
                         <div class="sub_menu">
